--- a/css/styles.css
+++ b/css/styles.css
@@ -689,6 +689,8 @@ footer {
 }
 
 .footer-adress {
+  display: block;
+
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -696,7 +698,7 @@ footer {
   letter-spacing: 0.03em;
   color: var(--footer-color);
   text-decoration: none;
-  display: block;
+
   margin: 0;
 }
 
@@ -705,8 +707,13 @@ footer {
   color: var(--accent-color);
 }
 
+.footer-flex {
+  display: flex;
+}
+
 .footer-social-links {
   margin-left: 70px;
+  margin-right: 93px;
 }
 
 .footer-social-links .team-social-list {
@@ -750,6 +757,52 @@ footer {
 }
 .social-link-footer .social-icon-footer {
   fill: var(--white-color);
+}
+
+.email-holder .title {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.143;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+
+  color: var(--white-color);
+}
+
+.email-text {
+  width: 358px;
+  height: 50px;
+  padding: 15px 16px;
+  margin-right: 12px;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: transparent;
+
+  color: var(--white-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.email-text:focus {
+  outline: none;
+  border: 1px solid var(--accent-color);
+}
+
+.icon-send {
+  margin-left: 10px;
+  fill: var(--white-color);
+}
+
+.footer-btn {
+  display: inline-flex;
+  align-items: center;
 }
 
 /* Portfolio CSS */
