--- a/css/styles.css
+++ b/css/styles.css
@@ -450,10 +450,36 @@ button {
 }
 
 .form-checkbox {
+  /* position: relative;*/
   display: flex;
   margin-bottom: 30px;
   text-align: center;
+  align-items: center;
   cursor: pointer;
+}
+.checkbox-icon {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 16px;
+  height: 15px;
+  border-radius: 2px;
+  margin-right: 7px;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.icon-check {
+  position: absolute;
+  position: 50% 50%;
+  border: 2px solid var(--primary-text-color);
+  border-radius: 2px;
+  margin-right: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .policy-agree {
@@ -470,27 +496,19 @@ button {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+  margin-left: 5px;
 
   color: var(--accent-color);
 }
 
-.checkbox-icon {
-  display: flex;
-  align-items: center;
-  width: 16px;
-  height: 15px;
-  border-radius: 2px;
-  margin-right: 7px;
-  transition-property: background-color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .checkbox-policy:focus ~ .icon-check {
-  background-color: var(--accent-color);
+  /*border: transparent;
+  /*border-color: var(--accent-color);
+  background-color: var(--accent-color);*/
 }
 
 .checkbox-policy:checked ~ .icon-check {
+  border: transparent;
   background-color: var(--accent-color);
   /*background-image: url(../images/Vector.svg);
   background-repeat: no-repeat;
@@ -514,6 +532,31 @@ button {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+.send-btn {
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  border-radius: 4px;
+  padding: 10px 55px;
+  background-color: var(--accent-color);
+  border: 0;
+  cursor: pointer;
+  color: var(--white-color);
+  align-items: center;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  margin: auto;
+}
+
+.send-btn:hover,
+.send-btn:focus {
+  background-color: #188ce8;
 }
 
 /*Features*/
