--- a/css/styles.css
+++ b/css/styles.css
@@ -253,7 +253,7 @@ button {
   color: #ffffff;
   background-color: var(--accent-color);
   cursor: pointer;
-  /*border-radius: 4px;*/
+  border-radius: 4px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
@@ -337,6 +337,7 @@ button {
   cursor: pointer;
   justify-content: center;
   align-items: center;
+  box-shadow: none;
 }
 
 .close-button:focus,
@@ -422,8 +423,12 @@ button {
 }
 
 .form-comment {
+  font-family: "Roboto" sans-serif;
+  font-style: normal;
   height: 120px;
   width: 100%;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
   padding: 12px 16px;
   margin-top: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -432,6 +437,7 @@ button {
   transition-property: border-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  resize: none;
 }
 
 .form-comment:focus {
@@ -456,6 +462,7 @@ button {
   text-align: center;
   align-items: center;
   cursor: pointer;
+  justify-content: center;
 }
 .checkbox-icon {
   position: relative;
